Fix deadlocks in KoShapeManager

updateTree() can emit shapeChanged() signals. And in general, we shouldn't
emit any signal with a lock held.

BUG:412746