libs/flake/KoShapeManager.cpp
@@ -65,25 +65,28 @@ bool KoShapeManager::Private::shapeUsedInRenderingTree(KoShape *shape)
 
 void KoShapeManager::Private::updateTree()
 {
-    QMutexLocker l(&this->treeMutex);
-
     bool selectionModified = false;
     bool anyModified = false;
-    Q_FOREACH (KoShape *shape, aggregate4update) {
-        selectionModified = selectionModified || selection->isSelected(shape);
-        anyModified = true;
+
+    {
+        QMutexLocker l(&this->treeMutex);
+
+        Q_FOREACH (KoShape *shape, aggregate4update) {
+            selectionModified = selectionModified || selection->isSelected(shape);
+            anyModified = true;
+        }
+
+        foreach (KoShape *shape, aggregate4update) {
+            if (!shapeUsedInRenderingTree(shape)) continue;
+
+            tree.remove(shape);
+            QRectF br(shape->boundingRect());
+            tree.insert(br, shape);
+        }
+
+        aggregate4update.clear();
+        shapeIndexesBeforeUpdate.clear();
     }
-
-    foreach (KoShape *shape, aggregate4update) {
-        if (!shapeUsedInRenderingTree(shape)) continue;
-
-        tree.remove(shape);
-        QRectF br(shape->boundingRect());
-        tree.insert(br, shape);
-    }
-
-    aggregate4update.clear();
-    shapeIndexesBeforeUpdate.clear();
 
     if (selectionModified) {
         emit q->selectionContentChanged();
@@ -307,9 +310,10 @@ KoShapeManager::ShapeInterface *KoShapeManager::shapeInterface()
 
 void KoShapeManager::paint(QPainter &painter, const KoViewConverter &converter, bool forPrint)
 {
+    d->updateTree();
+
     QMutexLocker l1(&d->shapesMutex);
 
-    d->updateTree();
     painter.setPen(Qt::NoPen);  // painters by default have a black stroke, lets turn that off.
     painter.setBrush(Qt::NoBrush);
 
@@ -543,9 +547,10 @@ void KoShapeManager::paintShape(KoShape *shape, QPainter &painter, const KoViewC
 
 KoShape *KoShapeManager::shapeAt(const QPointF &position, KoFlake::ShapeSelection selection, bool omitHiddenShapes)
 {
+    d->updateTree();
+
     QMutexLocker l(&d->shapesMutex);
 
-    d->updateTree();
     QList<KoShape*> sortedShapes;
 
     {
